// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GithubStats component Should render the GithubStats component 1`] = `
<Fragment>
  <div
    className="c-section__entry c-section__entry--no-background"
  >
    <div
      className="o-shell"
    >
      <h2>
        Github profile statistics
      </h2>
      <ul
        className="c-section__list"
      >
        <li
          key="0"
        >
          <span>
            Used languages
            :
          </span>
          <strong>
            JavaScript, TypeScript
          </strong>
        </li>
        <li
          key="1"
        >
          <span>
            Followers
            :
          </span>
          <strong>
            50
          </strong>
        </li>
        <li
          key="2"
        >
          <span>
            Following
            :
          </span>
          <strong>
            154
          </strong>
        </li>
        <li
          key="3"
        >
          <span>
            Joined date
            :
          </span>
          <strong>
            Mock date
          </strong>
        </li>
        <li
          key="4"
        >
          <span>
            Updated at
            :
          </span>
          <strong>
            Mock date
          </strong>
        </li>
        <li
          key="5"
        >
          <span>
            Last active
            :
          </span>
          <strong>
            Mock date
          </strong>
        </li>
        <li
          key="6"
        >
          <span>
            Total repositories
            :
          </span>
          <strong>
            2
          </strong>
        </li>
        <li
          key="7"
        >
          <span>
            Private repositories
            :
          </span>
          <strong>
            5
          </strong>
        </li>
        <li
          key="8"
        >
          <span>
            Public repositories
            :
          </span>
          <strong>
            47
          </strong>
        </li>
        <li
          key="9"
        >
          <span>
            Organizations repositories
            :
          </span>
          <strong>
            -50
          </strong>
        </li>
        <li
          key="10"
        >
          <span>
            Total gists
            :
          </span>
          <strong>
            28
          </strong>
        </li>
        <li
          key="11"
        >
          <span>
            Private gists
            :
          </span>
          <strong>
            8
          </strong>
        </li>
        <li
          key="12"
        >
          <span>
            Public gists
            :
          </span>
          <strong>
            20
          </strong>
        </li>
        <li
          key="13"
        >
          <span>
            Total contributions
            :
          </span>
          <strong>
            301
          </strong>
        </li>
        <li
          key="14"
        >
          <span>
            Total stars
            :
          </span>
          <strong>
            4
          </strong>
        </li>
        <li
          key="15"
        >
          <span>
            Total issues
            :
          </span>
          <strong>
            3
          </strong>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="c-section__entry"
  >
    <small
      className="c-section__stamp"
    >
      Last updated: 
      Mock date
    </small>
    <div
      className="o-shell"
    >
      <h2>
        Github contributions calendar
      </h2>
      <div
        className="c-calendar__outer"
      >
        <div
          className="c-calendar c-calendar--github"
        >
          <Component
            src="/github-calendar.svg"
          />
          <div
            className="c-calendar__legend"
            title="A summary of pull requests, issues opened, and commits to the default and gh-pages branches."
          >
            Less
            <ul>
              <li
                style={
                  Object {
                    "backgroundColor": "var(--color-calendar-graph-day-bg)",
                  }
                }
              />
              <li
                style={
                  Object {
                    "backgroundColor": "var(--color-calendar-graph-day-L1-bg)",
                  }
                }
              />
              <li
                style={
                  Object {
                    "backgroundColor": "var(--color-calendar-graph-day-L2-bg)",
                  }
                }
              />
              <li
                style={
                  Object {
                    "backgroundColor": "var(--color-calendar-graph-day-L3-bg)",
                  }
                }
              />
              <li
                style={
                  Object {
                    "backgroundColor": "var(--color-calendar-graph-day-L4-bg)",
                  }
                }
              />
            </ul>
            More
          </div>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`GitlabStats component Should render the GitlabStats component 1`] = `
<Fragment>
  <div
    className="c-section__entry c-section__entry--no-background"
  >
    <div
      className="o-shell"
    >
      <h2>
        Gitlab profile statistics
      </h2>
      <ul
        className="c-section__list"
      >
        <li
          key="0"
        >
          <span>
            Used languages
            :
          </span>
          <strong>
            JavaScript, HTML, CSS, PHP, Shell
          </strong>
        </li>
        <li
          key="1"
        >
          <span>
            Joined date
            :
          </span>
          <strong>
            Mock date
          </strong>
        </li>
        <li
          key="2"
        >
          <span>
            Last active
            :
          </span>
          <strong>
            Mock date
          </strong>
        </li>
        <li
          key="3"
        >
          <span>
            Last year contributions
            :
          </span>
          <strong>
            105
          </strong>
        </li>
        <li
          key="4"
        >
          <span>
            Total repositories
            :
          </span>
          <strong>
            1
          </strong>
        </li>
        <li
          key="5"
        >
          <span>
            Public repositories
            :
          </span>
          <strong>
            0
          </strong>
        </li>
        <li
          key="6"
        >
          <span>
            Private repositories
            :
          </span>
          <strong>
            1
          </strong>
        </li>
        <li
          key="7"
        >
          <span>
            Personal repositories
            :
          </span>
          <strong>
            0
          </strong>
        </li>
        <li
          key="8"
        >
          <span>
            Organizations repositories
            :
          </span>
          <strong>
            1
          </strong>
        </li>
        <li
          key="9"
        >
          <span>
            Total stars
            :
          </span>
          <strong>
            0
          </strong>
        </li>
        <li
          key="10"
        >
          <span>
            Total issues
            :
          </span>
          <strong>
            0
          </strong>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="c-section__entry"
  >
    <small
      className="c-section__stamp"
    >
      Last updated: 
      Mock date
    </small>
    <div
      className="o-shell"
    >
      <h2>
        Gitlab contributions calendar
      </h2>
      <div
        className="c-calendar__outer"
      >
        <div
          className="c-calendar c-calendar--gitlab"
        >
          <Component
            src="/gitlab-calendar.svg"
          />
          <div
            className="c-calendar__hint"
          >
            Issues, merge requests, pushes, and comments.
          </div>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`SectionStats component Should render the SectionStats component 1`] = `
<Component
  className=" fullsize-background"
  hasButton={true}
  hasShell={false}
  id="stats"
  style={
    Object {
      "backgroundImage": "url(images/temp/desktop.jpg)",
    }
  }
>
  <header
    className="c-section__head"
  >
    <div
      className="o-shell"
    >
      <h1>
        Stats
      </h1>
    </div>
  </header>
  <Component
    data={
      Object {
        "calendar": Object {
          "2019-06-23": Object {
            "color": "#c6e48b",
            "count": 10,
          },
          "2019-06-24": Object {
            "color": "#c6e48b",
            "count": 9,
          },
        },
        "general": Object {
          "createdAt": "2013-06-03T18:11:48Z",
          "followers": 50,
          "following": 154,
          "privateGists": 8,
          "privateRepos": 5,
          "publicGists": 20,
          "publicRepos": 47,
          "updatedAt": "2020-06-23T10:52:09Z",
        },
        "repositories": Array [
          Object {
            "contributions": Array [
              Object {
                "count": 301,
                "user": "scriptex",
              },
            ],
            "createdAt": "2017-01-24T10:26:06Z",
            "fork": false,
            "issues": 1,
            "language": "JavaScript",
            "name": "atanas.info",
            "private": false,
            "size": 2042,
            "stargazers": 4,
            "updated_at": "2020-06-23T14:42:49Z",
            "watchers": 4,
          },
          Object {
            "contributions": Array [
              Object {
                "count": 200,
                "user": "test",
              },
            ],
            "createdAt": "2017-01-24T10:26:06Z",
            "fork": false,
            "issues": 2,
            "language": "TypeScript",
            "name": "test",
            "private": true,
            "size": 1024,
            "stargazers": 0,
            "updated_at": "2020-06-23T14:42:49Z",
            "watchers": 0,
          },
        ],
        "updated": "2020-11-26T14:14:22.858Z",
      }
    }
  />
  <Component
    data={
      Object {
        "calendar": Object {
          "2019-10-26": 50,
          "2019-11-07": 34,
          "2020-03-06": 21,
        },
        "general": Object {
          "createdAt": "2018-01-03T11:47:34.435Z",
          "repos": 101,
          "updatedAt": "2020-06-24T13:19:32.897Z",
        },
        "repositories": Array [
          Object {
            "createdAt": "2019-08-14T06:13:34.958Z",
            "fork": 0,
            "issues": 0,
            "languages": Object {
              "CSS": 25.79,
              "HTML": 26.07,
              "JavaScript": 47.72,
              "PHP": 0.41,
              "Shell": 0.01,
            },
            "name": "atanas.info",
            "private": true,
            "size": 18926796,
            "stargazers": 0,
            "updated_at": "2019-08-14T06:13:34.958Z",
          },
        ],
        "updated": "2020-11-26T14:14:22.858Z",
      }
    }
  />
</Component>
`;
